Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57399

QLocale returns incorrect numerus information for Armenian language

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.9.0 Beta 2
    • 5.6.2
    • Tools: Linguist
    • None
    • 28df30fccd3d5b1e1e0b58efb225246766d7fcd5

    Description

      The Armenian language is a French style language, not an Japanese one.

      http://www.unicode.org/cldr/charts/latest/supplemental/language_plural_rules.html#hy-comp

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            buddenha Oswald Buddenhagen
            kaffeine Alexandr Akulich
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes