fix numerus rules for armenian

unicode says they language uses french style plurals (0 & 1, and
everything else).

Task-number: QTBUG-57399
Change-Id: I2ebb80bbed9f055b7908e43134c086f7b34ce885
Reviewed-by: Alexandr Akulich <akulichalexander@gmail.com>
Reviewed-by: hjk <hjk@qt.io>