src/linguist/shared/numerus.cpp
@@ -124,7 +124,6 @@ static const char * const tagalogForms[] =
 #define EOL QLocale::C
 
 static const QLocale::Language japaneseStyleLanguages[] = {
-    QLocale::Armenian,
     QLocale::Bislama,
     QLocale::Burmese,
     QLocale::Chinese,
@@ -246,6 +245,7 @@ static const QLocale::Language englishStyleLanguages[] = {
 };
 static const QLocale::Language frenchStyleLanguages[] = {
     // keep synchronized with frenchStyleCountries
+    QLocale::Armenian,
     QLocale::Breton,
     QLocale::French,
     QLocale::Portuguese,
@@ -296,6 +296,7 @@ static const QLocale::Language tagalogLanguage[] = { QLocale::Tagalog, EOL };
 
 static const QLocale::Country frenchStyleCountries[] = {
     // keep synchronized with frenchStyleLanguages
+    QLocale::AnyCountry,
     QLocale::AnyCountry,
     QLocale::AnyCountry,
     QLocale::Brazil,
